# security-bypass

./: .gitignore  .updater.hashes  .updater_options  LICENSE  Security Bypass.xml  add_item_dialog.ui  admin.bat  create_installer.py  generate_all.py  initial_setup.py  installer.py  logger.py  password_manager.py  password_manager.ui  pyproject.toml  requirements.txt  security_bypass.py  security_bypass_tray.py  settings.py  start.bat
.github/: CODEOWNERS
.github/workflows/: ci.yml
authentication/: __main__.py  fingerprint.py  methods.py
common/: auto_key_trigger_manager.py  exceptions.py  exit_codes.py  ignored_window_handler.py  password_validator.py  tools.py
communication/: data_sharing.py
config/: __init__.py  config.py  config_key_manager.py
exclusion/: manager.py
handlers/authentication/: base.py  face_recognition.py  fingerprint.py  methods.py  password.py
handlers/authentication/winbio/: __main__.py  winbio_base.py  winbio_types.py
handlers/notification/: base.py  cli.py  gui.py  toast.py  tray.py
handlers/window_selector/: __path_fixer__.py  base.py  cli.py  gui.py  multithread_support.py  pyqt_gui.py
helpers/: config_manager.py  user_preferences.py
helpers/ui_helpers/: altered.py  background_authenticator.py  constants.py  notification.py
helpers/ui_helpers/pm/: focus_map.py
helpers/ui_helpers/pm/dialogs/: add_item.py  auth_method.py  dialog_base.py  export_config.py  import_config.py  password.py
helpers/ui_helpers/pm/handlers/: menu_action.py  signal_handler.py
installer/: Config.txt  install.bat  postscript.bat
notification_handler/: base.py  cli.py  gui.py  tray.py
package_builder/: registry.py
select_window_info/: __path_fixer__.py  base.py  cli.py  gui.py  multithread_support.py  pyqt_gui.py
ui/: add_item_dialog.ui  background_authenticator.ui  export_config_dialog.ui  get_auth_method_dialog.ui  get_passkey_dialog.ui  get_password_dialog.ui  import_config_dialog.ui  password_manager.ui
updater/: __main__.py  constants.py  helpers.py
updater/handlers/: common.py  generate_hashes_handler.py
