[project]
name = "SecurityBypass"
authors = [{ name = "Erdogan Onal", email = "erdoganonal@windowslive.com" }]
version = "1.1.0"
description = "Allows you pick a pre-saved password and enters it for you"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = { file = 'README.md', content-type = 'text/markdown' }
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["common", "communication", "config", "exclusion", "generated", "handlers", "helpers", "updater"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.isort]
profile = "black"

[tool.black]
line-length = 140

[tool.mypy]
strict = true
show_error_codes = true
implicit_reexport = true
exclude = [".env", "env", "tests", "env.39"]

[tool.pylint]
max-line-length = 140

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py310
    py311
    py312

[testenv]
deps =
    black==25.1.0
    colorama
    isort
    mypy==1.16.0
    password_validator
    psutil
    py7zr
    pyautogui
    pywinauto
    pycryptodome
    pylint==3.3.7
    pyreadline
    pywin32
    pyqt6
    requests
    screeninfo
    tkhelper
    windows-toasts
    types-cffi
    types-colorama
    types-psutil
    types-PyAutoGUI
    types-pywin32
    types-requests

commands =
    python generate_all.py
    isort . --line-length 140 --extend-skip env --extend-skip .env --extend-skip env.39 --profile black
    mypy . --install-types --non-interactive
    black . --check --extend-exclude generated
    python -c "sys=__import__('sys');os=__import__('os');IGNORED_FOLDERS=('.vscode','.git', 'env', '.env', 'env.39', 'env_3.9', 'env_3.13', '__pycache__', '.mypy_cache', '.tox', '.hooks', 'venv_temp', 'SecurityBypass.egg-info', 'tests', '.pytest_cache', 'installer', '.github',);IGNORED_FILES=();ROOT_DIR = '.';pylint_params=[os.path.basename(path_info.path) for path_info in os.scandir(ROOT_DIR) if not ((path_info.is_dir() and any(ignored == path_info.name for ignored in IGNORED_FOLDERS)) or (path_info.is_file() and (any(ignored == path_info.name for ignored in IGNORED_FILES) or not path_info.path.endswith('.py'))))];sys.exit(os.system(f'pylint ' + ' '.join(pylint_params)))"
    python -m updater generate-hashes
    # pytest
"""
