[project]
name = "SecurityBypass"
authors = [{ name = "Erdogan Onal", email = "erdoganonal@windowslive.com" }]
version = "1.1.0"
description = "Allows you pick a pre-saved password and enters it for you"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = { file = 'README.md', content-type = 'text/markdown' }
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["common", "communication", "config", "exclusion", "generated", "handlers", "helpers", "updater"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.isort]
profile = "black"

[tool.black]
line-length = 140

[tool.mypy]
strict = true
show_error_codes = true
implicit_reexport = true
exclude = [".env", "env", "tests", "env.39"]

[tool.pylint]
max-line-length = 140

[tool.tox]
minversion = "4.0"
env_list = ["py310", "py311", "py312", "py313"]

[tool.tox.env.py310]
deps = [
    "black==25.1.0",
    "colorama",
    "isort",
    "mypy==1.16.0",
    "password_validator",
    "psutil",
    "py7zr",
    "pyautogui",
    "pywinauto",
    "pycryptodome",
    "pylint==3.3.7",
    "pyreadline",
    "pywin32",
    "pyqt6",
    "requests",
    "screeninfo",
    "tkhelper",
    "windows-toasts",
    "types-cffi",
    "types-colorama",
    "types-psutil",
    "types-PyAutoGUI",
    "types-pywin32",
    "types-requests"
]
commands = [
    ["python", "generate_all.py"],
    ["isort", ".", "--line-length", "140", "--extend-skip", "env", "--extend-skip", ".env", "--extend-skip", "env.39", "--profile", "black"],
    ["mypy", ".", "--install-types", "--non-interactive"],
    ["black", ".", "--check", "--extend-exclude", "generated"],
    ["pylint", "common", "communication", "config", "exclusion", "generated", "handlers", "helpers", "updater"],
]

[tool.tox.env.py311]
inherit = true

[tool.tox.env.py312]
inherit = true
commands = [
    # finally, generate hashes for the updater
    ["python", "-m", "updater", "generate-hashes"]
]
